--- a/about.html
+++ b/about.html
@@ -49,12 +49,18 @@
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
       <div class="col-lg-6 px-0">
         <h1 class="display-4 fst-italic">YASH ENTERPRISES</h1>
-        <p class="lead my-3">Welcome to our financial platform, a dynamic hub that collaborates seamlessly with a
+        <!-- <p class="lead my-3">Welcome to our financial platform, a dynamic hub that collaborates seamlessly with a
           multitude of renowned banks, including but not limited to HDFC Bank, ICICI Bank, State Bank of India (SBI),
           Kotak Mahindra Bank, Axis National Bank, IndusInd Bank, Bank of Baroda, Punjab National Bank, and many more.
-        </p>
-        <p class="lead my-3">With a comprehensive network encompassing a spectrum of financial institutions, we aim to
-          deliver a unified and user-friendly experience.</p>
+        </p> -->
+        <p class="lead my-3">As a Financial Service Providers, We maintain a strong professional
+          relationship with a wide range of banks to offer comprehensive financial services to our clients. Our
+          partnerships span across leading national and international banks, enabling us to provide tailored solutions
+          such as personal loans, home loans, business loans, and credit facilities. This broad network allows us to
+          meet diverse financial needs efficiently and offer competitive options that best suit our clients'
+          requirements.</p>
+        <!-- <p class="lead my-3">With a comprehensive network encompassing a spectrum of financial institutions, we aim to
+          deliver a unified and user-friendly experience.</p> -->
         <p class="lead mb-0"><a href="#about" class="text-body-emphasis fw-bold">Continue reading...</a></p>
       </div>
     </div>
@@ -65,41 +71,79 @@
   <section class="about" id="about">
 
     <div class="p-5 text-center bg-body-tertiary rounded-3">
-      <h1 class="text-body-emphasis">Our Partners</h1>
-      <p class="col-lg-8 mx-auto fs-5 text-muted">"Meet our esteemed partners who share our commitment to excellence and
-        innovation, helping us deliver unparalleled solutions. We are proudly teamed with them."</p>
+      <div>
+        <h1 class="text-body-emphasis">Our Partners</h1>
+        <p class="col-lg-8 mx-auto fs-5 text-muted">"Meet our esteemed partners who share our commitment to excellence
+          and innovation, helping us deliver unparalleled solutions. We are proudly teamed with them."</p>
+      </div>
+
+      <!-- Auto Scroller -->
+      <div class="logos">
+        <div class="logos-slide">
+          <img src="logo1.svg" />
+          <img src="logo2.svg" />
+          <img src="logo3.svg" />
+          <img src="logo4.svg" />
+          <img src="logo5.svg" />
+          <img src="logo6.svg" />
+          <img src="logo7.svg" />
+          <img src="logo8.svg" />
+          <img src="logo9.svg" />
+          <img src="logo10.svg" />
+          <img src="logo11.svg" />
+          <img src="logo12.svg" />
+          <img src="logo13.svg" />
+          <img src="logo14.svg" />
+          <img src="logo15.svg" />
+          <img src="logo16.svg" />
+          <img src="logo17.svg" />
+          <img src="logo18.svg" />
+          <img src="logo19.svg" />
+          <img src="logo20.svg" />
+          <img src="logo21.svg" />
+          <img src="logo22.svg" />
+          <img src="logo23.svg" />
+          <img src="logo24.svg" />
+          <img src="logo25.svg" />
+          <img src="logo26.svg" />
+          <img src="logo27.svg" />
+          <img src="logo28.svg" />
+          <img src="logo29.svg" />
+          <img src="logo30.svg" />
+          <img src="logo31.svg" />
+          <img src="logo32.svg" />
+          <img src="logo33.svg" />
+          <img src="logo34.svg" />
+        </div>
+      </div>
+
     </div>
+
 
     <div class="container py-4">
 
       <div class="row align-items-md-stretch">
-
         <div class="col-md-6">
           <div class="h-100 p-5 bg-body-tertiary border rounded-3">
             <h2>Ruloans</h2>
-            <p>"Anwar Shaikh is a Business Manager at Ruloans, a leader in financial services. Proud to partner with
-              Ruloans, Anwar contributes to the company's commitment to excellence and innovation, ensuring unmatched
-              solutions for clients' financial needs. This collaboration expands services and leverages Ruloans'
-              expertise to deliver exceptional value. Together, they are dedicated to delivering exceptional financial
-              solutions."</p>
-            <button class="btn btn-outline-secondary" type="button"><a href="https://www.ruloans.com">Explore
-                more</a></button>
+            <p>"We're proud to partner with Ruloans, a leader in financial services. Together, we're committed to
+              excellence and innovation, ensuring unmatched solutions for your financial needs. This collaboration
+              expands our services, leveraging Ruloans' expertise to deliver exceptional value."</p>
+            <button class="btn btn-outline-secondary" type="button"><a href="https://www.ruloans.com">Example
+                button</a></button>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="h-100 p-5 bg-body-tertiary border rounded-3">
             <h2>Finance Buddha</h2>
-            <p>"Anwar Shaikh is a Sales Manager at Finance Buddha, a prominent financial services provider. Delighted to
-              partner with Finance Buddha, Anwar upholds high standards of excellence and drives innovation in financial
-              solutions. This partnership strengthens the service range, harnessing Finance Buddha's resources to
-              deliver superior customer outcomes. Together, they are dedicated to delivering exceptional financial
-              solutions."</p>
-            <button class="btn btn-outline-secondary" type="button"><a href="https://www.financebuddha.com">Explore
-                more</a></button>
+            <p>"Delighted to partner with Finance Buddha, a prominent financial services provider. Together, we uphold
+              high standards of excellence and drive innovation in solutions. This partnership strengthens our service
+              range, harnessing Finance Buddha's resources for superior customer outcomes."</p>
+            <button class="btn btn-outline-secondary" type="button"><a href="https://www.financebuddha.com">Example
+                button</a></button>
           </div>
         </div>
-
       </div>
 
     </div>
@@ -110,23 +154,66 @@
 
         <div class="col-md-6">
           <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-            <h2>Credit Bazaar</h2>
-            <p>"Pleased to collaborate with Credit Bazaar, a trusted name in financial services. Together, we're
-              dedicated to excellence and innovation, delivering tailored financial solutions. This alliance enhances
-              our portfolio, leveraging Credit Bazaar's expertise for impactful solutions and exceptional value."</p>
-            <button class="btn btn-outline-secondary" type="button"><a href="https://creditbazaar.in">Explore
-                more</a></button>
+            <!-- Our Team Members -->
+            <div class="carousel-container">
+              <h2 class="text-body-emphasis">Our Experienced Team Members</h2>
+              <div class="carousel-slide active" id="slide1">
+                <img src="man.png" alt="Person 1">
+                <h3>Anwar Shaikh</h3>
+                <p>Contact: 9922556788</p>
+                <p>Experience: 10 years in Finance</p>
+              </div>
+
+              <div class="carousel-slide" id="slide2">
+                <img src="man.png" alt="Person 2">
+                <h3>Yogesh Parte</h3>
+                <p>Contact: 9323666331</p>
+                <p>Experience: 8 years in Banking</p>
+              </div>
+
+              <div class="carousel-slide" id="slide3">
+                <img src="man.png" alt="Person 3">
+                <h3>Sunil Choubey</h3>
+                <p>Contact: 9172357858</p>
+                <p>Experience: 12 years in Investment</p>
+              </div>
+
+              <div class="dots-container">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-            <h2>Yash Enterprises</h2>
-            <p>"Excited to partner with Yash Enterprises, known for expertise in financial service. Together, we're
-              committed to excellence and innovation, delivering tailored solutions. This collaboration strengthens our
-              ability to provide comprehensive services, leveraging Yash Enterprises' specialized knowledge for
-              exceptional client outcomes."</p>
-            <button class="btn btn-outline-secondary" type="button"><a href="#">Explore more</a></button>
+            <!-- EMI Calculater -->
+            <div class="calculator-container">
+              <h2>Loan EMI Calculator</h2>
+
+              <div class="input-group">
+                <label for="loanAmount">Loan Amount (₹):</label>
+                <input type="number" id="loanAmount" placeholder="Enter Loan Amount" required>
+              </div>
+
+              <div class="input-group">
+                <label for="interestRate">Interest Rate (% per annum):</label>
+                <input type="number" id="interestRate" placeholder="Enter Interest Rate" required>
+              </div>
+
+              <div class="input-group">
+                <label for="loanTenure">Loan Tenure (Years):</label>
+                <input type="number" id="loanTenure" placeholder="Enter Tenure in Years" required>
+              </div>
+
+              <button onclick="calculateEMI()">Calculate EMI</button>
+
+              <div class="result" id="result">
+                <h3>Your Monthly EMI: ₹<span id="emiResult">0</span></h3>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -162,7 +249,7 @@
         <div class="col-6 col-md-2 mb-3">
           <h5>Contact info</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="Mob:+91 9022556788" class="nav-link p-0 text-body-secondary">+91
+            <li class="nav-item mb-2"><a href="callto: 91 9022556788" class="nav-link p-0 text-body-secondary">+91
                 9022556788 </a></li>
             <li class="nav-item mb-2"><a href="mailto: yashfinance2015@gmail.com"
                 class="nav-link p-0 text-body-secondary">yashfinance2015@gmail.com</a>
@@ -191,7 +278,6 @@
   </div>
 
 
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -203,6 +289,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <script src="about.js"></script>
+
 
 
 </body>
