--- a/about.html
+++ b/about.html
@@ -148,6 +148,33 @@
 
     </div>
 
+
+    <div class="container py-4">
+
+      <div class="row align-items-md-stretch">
+
+        <div class="col-md-12">
+          <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+            <h2>Prayagraj Security Services Enterprises</h2>
+            <p>"We are excited to announce a strategic, long-term collaboration between our Yash Enterprises financial
+              services company and Prayagraj Security Services Enterprises, built on over five years of mutual trust and
+              professional excellence. This partnership aims to enhance both the security and operational efficiency of
+              our organization by leveraging Prayagraj's decades of experience in providing reliable security personnel
+              and skilled housekeeping workers. Additionally, through this collaboration, we also supply workers for
+              corresponding needs, ensuring that all aspects of security and facility management are addressed.
+              Together, we are committed to providing a safe, secure, and well-maintained environment for our clients,
+              employees, and stakeholders, setting a higher standard of service excellence by combining our financial
+              expertise with Prayagraj's top-notch solutions."</p>
+            <!-- <button class="btn btn-outline-secondary" type="button"><a
+                href="https://www.dnb.com/business-directory/company-profiles.prayagraj_security_enterprises.66d01de1d1c947605c954c5b570bb6e1.html">Example
+                button</a></button> -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
     <div class="container py-4">
 
       <div class="row align-items-md-stretch">
@@ -167,14 +194,14 @@
               <div class="carousel-slide" id="slide2">
                 <img src="man.png" alt="Person 2">
                 <h3>Yogesh Parte</h3>
-                <p>Contact: 9323666331</p>
+                <!-- <p>Contact: 9323666331</p> -->
                 <p>Experience: 8 years in Banking</p>
               </div>
 
               <div class="carousel-slide" id="slide3">
                 <img src="man.png" alt="Person 3">
                 <h3>Sunil Choubey</h3>
-                <p>Contact: 9172357858</p>
+                <!-- <p>Contact: 9172357858</p> -->
                 <p>Experience: 12 years in Investment</p>
               </div>
 
